# greentic-runner

./: .gitignore  Cargo.toml  README.md
.codex/: CachePR-04.md  PR-00-VISION.md  PR-01-DEPRECATION-SIGNALS.md  PR-02-DOCS-SWEEP.md  PR-07.md  PR-13.md  repo_overview.md
.codex/done/: CachePR-01.md  CachePR-02.md  CachePR-03.md  CachePR-05.md  PR-08.md  StatePR-03.md
.github/workflows/: auto-tag.yml  gen-bindings.yml  publish.yml  rust-ci.yml
audit/: RISKS.md  RUNNER_MULTI_TENANT_CHECKLIST.md  RUNNER_MULTI_TENANT_REPORT.md
audit/REPROS/: README.md
ci/: local_check.sh
crates/greentic-i18n/: Cargo.toml
crates/greentic-i18n/src/: lib.rs
crates/greentic-runner/: Cargo.toml
crates/greentic-runner-desktop/: Cargo.toml
crates/greentic-runner-desktop/src/: lib.rs
crates/greentic-runner-host/: Cargo.toml  README.md
crates/greentic-runner/src/: lib.rs  main.rs
crates/greentic-runner/src/cli/: conformance.rs  replay.rs
crates/greentic-runner/src/gen_bindings/: input.rs  mod.rs
crates/greentic-runner/tests/: conformance.rs  contract_cli.rs  gen_bindings.rs  snapshots.rs
crates/greentic-runner/tests/fixtures/contract/: describe.mismatch.json  describe.valid.json
crates/runner-core/: Cargo.toml
crates/tests/: Cargo.toml
docs/: README.md  component_payload_and_state.md  component_state.md  pr08_scope.md  runner-cache.md  runner-host-inventory.md  runner-op-invoke.md  runner_current_behaviour.md
docs/audits/: external_component_manifests.md
docs/vision/: README.md  canonical-v0.6.md  deprecations.md  legacy.md
packs/: gtbind.index.json
(+312 files in other folders)
