[package]
name = "greentic-runner"
version.workspace = true
edition.workspace = true
license = "MIT"
description = "Greentic runner binaries and re-exported host/new-runner APIs"
homepage = "https://github.com/greentic-ai/greentic-runner"
repository = "https://github.com/greentic-ai/greentic-runner"
documentation = "https://docs.rs/greentic-runner"
readme = "../../README.md"
keywords = ["greentic", "agent", "runner", "wasm", "mcp"]
categories = ["wasm", "command-line-utilities", "network-programming"]

[dependencies]
anyhow.workspace = true
clap.workspace = true
greentic-runner-host = { workspace = true, features = ["mcp"] }
greentic-runner-desktop = { workspace = true }
greentic-types.workspace = true
humantime.workspace = true
runner-core = { workspace = true }
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
serde_yaml_bw.workspace = true
serde.workspace = true
wasmparser.workspace = true
url.workspace = true

[lib]
name = "greentic_runner"
path = "src/lib.rs"

[[bin]]
name = "greentic-runner"
path = "src/main.rs"

[[bin]]
name = "greentic-gen-bindings"
path = "src/bin/gen_bindings.rs"
